
SET( QT_USE_QTOPENGL TRUE )

INCLUDE_DIRECTORIES( ../src/gui )

INCLUDE( ${QT_USE_FILE} )
ADD_DEFINITIONS( ${QT_DEFINITIONS} )

SET( MOC_HEADERS
     fenetrePrincipale.hpp )

QT4_WRAP_CPP( MOC_SOURCES ${MOC_HEADERS} )

FILE( GLOB MAIN_SOURCES "*.cpp" "*.hpp" )

SOURCE_GROUP( Main FILES ${MAIN_SOURCES} )

add_executable( ${PROJECT_NAME} ${MAIN_SOURCES} ${MOC_SOURCES} )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${QT_LIBRARIES} ${OPENGL_LIBRARIES} source_general )
